tests/003.out
Fatal error: Uncaught Error: Call to undefined function helloworld_test2() in /home/nekoimi/developer/cpp-project/php-src/ext/helloworld/tests/003.php:2
Stack trace:
#0 {main}
  thrown in /home/nekoimi/developer/cpp-project/php-src/ext/helloworld/tests/003.php on line 2