tests/003.php
<?php
var_dump(helloworld_test2());
var_dump(helloworld_test2('PHP'));
?>
